[package]
name = "flash-sale"
version = "0.1.0"
edition = "2018"
authors = ["Stephen Ling<lingfromsh@163.com>"]
keywords = ["e-commercial"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1.0"
serde_json = "1.0"
once_cell = "1.8.0"
jwt = "0.14.0"
sha2 = "0.9.5"
hmac = "0.11.0"

[dependencies.mongodb]
version = "1.2.2"
default-features = false
features = ["async-std-runtime"]